@@ -1,3 +1,4 @@
-The Libcroco project is an effort to build a generic Cascading Style Sheet
-(CSS) parsing and manipulation toolkit that can be used by GNOME applications
-in need of CSS support.
+The Libcroco project is a generic Cascading Style Sheet (CSS)
+parsing and manipulation toolkit. It provides a Simple Api for CSS
+and Cascading Style Sheet Object Model parser, a CSS2 selection
+engine, and an XML/CSS layout/rendering engine.
