@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.6 2005/02/24 14:48:43 agc Exp $
+$NetBSD: distinfo,v 1.7 2006/03/08 07:38:50 wiz Exp $
 
-SHA1 (libcroco-0.6.1.tar.bz2) = fdb1d0ab7082836c570f98b1846e4ddcc0b37607
-RMD160 (libcroco-0.6.1.tar.bz2) = ed823fa815f8fcb6a87b1637db6df2561e92425d
-Size (libcroco-0.6.1.tar.bz2) = 381188 bytes
+SHA1 (libcroco-0.6.2.tar.bz2) = 4b0dd540a47f2492b1ac7cd7e3ec63c2ef4c9c2a
+RMD160 (libcroco-0.6.2.tar.bz2) = 402daf6ef986f90998449c254822080b38e28cd7
+Size (libcroco-0.6.2.tar.bz2) = 415492 bytes
